--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -16,11 +16,14 @@
 #outer-wrapper {
     background: #fff;
     width: 100%;
+    border: none;
+    padding: 0px;
 }
 
 #wrapper {
     padding:0px;
     width: 100%;
+    border:none;
 }
 
 .space #wrapper {
@@ -123,7 +126,6 @@
 
 
 .note_wrap {
-    height : 30px;
     padding-left: 20px;
 }
 
@@ -141,6 +143,7 @@ background-color: #F5FAFF;
 
 .notes-head {
     .clearfix;
+    padding:20px;
     margin-bottom: @baseLine * 2;
     background-color: #F0F0F0;
 
