Removed some padding and added the official color

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -132,7 +132,7 @@
 }
 
 .gray_note {
-background-color: #DFECFA;
+background-color: #B9D2ED;
 }
 
 .blue_note {
@@ -232,7 +232,7 @@ background-color: #DFECFA;
     span {
         color: #000;
         border-radius: 0 6px 6px 0;
-        border-bottom: 5px solid rgba(43, 58, 153, .5);
+        border-bottom: 5px solid rgba(185, 210, 237, 1);
     }
 
     li:first-child {
@@ -310,7 +310,7 @@ article {
         margin: 0;
         padding: .714rem 0 .5rem;
         position: relative;
-        padding-bottom: 30px;
+        padding-bottom: 10px;
         padding-right:5px;
     }
 
