Improved gray area responsiveness semi broke here

--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -62,13 +62,14 @@
         </ul>
       </aside>
     {% endif %}
-    <p>
-     <h3>{{ version }}</h3></p>
+
+    <div class="title_text_wrapper" >
+    <span class="version_wrapper">
+     <h3>{{ version }}</h3>
      <p>
-     <h2>{{ _('{date}')|f(date=release.release_date|l10n_format_date, version=release.version) }} {{ _('{channel}')|f(channel=release.channel) }} Channel</h2></p>
-     <p>
-     {{ release.text|markdown|safe }}
-     </p>
+     <h2>{{ _('{date}')|f(date=release.release_date|l10n_format_date, version=release.version) }} {{ _('{channel}')|f(channel=release.channel) }} Channel</h2></p> </span>
+     <span class="thank_wrapper">
+     {{ release.text|markdown|safe }} </span> </div>
 
      {% endblock %}
 
