--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -75,6 +75,26 @@
     top: 0;
 }
 
+.version_wrapper {
+    width:25%;
+    height: 100%; 
+    float: left;
+    position: relative;
+    padding-top: 10px;
+}
+
+.thank_wrapper {
+    width: 60%;
+    float: left;
+    text-align: left;
+    margin-top: 30px;
+}
+
+.title_text_wrap {
+    width: 100%;
+    position: relative;
+}
+
 #new-wrapper {
     overflow: hidden;
     position: relative;
@@ -240,6 +260,7 @@ background-color: #DFECFA;
         float: left;
         background: #fff;
         width: 100%;
+        border-radius: 10px 10px 10px 10px;
     }
 
     li {
