Fixing broken menu

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -16,14 +16,11 @@
 #outer-wrapper {
     background: #fff;
     width: 100%;
-    border: none;
-    padding: 0px;
 }
 
 #wrapper {
     padding:0px;
     width: 100%;
-    border:none;
 }
 
 .space #wrapper {
@@ -161,7 +158,8 @@ background-color: #DFECFA;
 
 .notes-head {
     .clearfix;
-    padding:5%;
+    padding-right:5%;
+    padding-left:5%;
     padding-bottom:0px;
     padding-top:10px;
     margin-bottom: @baseLine * 2;
@@ -232,14 +230,14 @@ background-color: #DFECFA;
     text-align: center;
 }
 
-.first {
+.firstPlatform {
         padding-left: 40%;
         padding-right: 5%;
 }
 
 #platform {
     overflow: hidden;
-    padding-top:10px;
+    padding-top:0px;
     width: 100%;
     padding-right: 0px;
     padding-left: 0px;
@@ -553,9 +551,10 @@ article {
         background-size: 650px;
     }
 
-    .first {
+    .firstPlatform
+         {
         padding-left: 40%;
-    }
+        }
 
     .notes-head {
         h1,
@@ -595,7 +594,7 @@ article {
         background-size: 320px;
     }
 
-    .first {
+    .firstPlatform {
         padding-left: 15%;
     }
 
