--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -53,10 +53,10 @@
       <aside id="platform">
         <ul>
         {% if release.product == 'Firefox' %}
-          <li class = "first"><span>{{ _('Desktop') }}</span></li>
+          <li class ="firstPlatform"><span>{{ _('Desktop') }}</span></li>
           <li><a href="{{ equivalent_release_url }}">{{ _('Android') }}</a></li>
         {% else %}
-          <li class="first"><a href="{{ equivalent_release_url }}">{{ _('Desktop') }}</a></li>
+          <li class="firstPlatform"><a href="{{ equivalent_release_url }}">{{ _('Desktop') }}</a></li>
           <li><span>{{ _('Android') }}</span></li>
         {% endif %}
         </ul>
