Use the open-sans mixin for a better int'l user experience

--- a/media/css/base/mozilla-share-cta.less
+++ b/media/css/base/mozilla-share-cta.less
@@ -42,7 +42,7 @@
         text-align: center;
         visibility: visible;
         text-shadow: none;
-        font-family: 'Open Sans', sans-serif;
+        .open-sans;
         opacity: 1;
         .transition(opacity .2s ease-in-out);
 
