Fix Bug 1174423 - Disable font-variant: small-caps for ga-IE, evaluate exclusion of other locales

--- a/media/css/l10n/az/intl.css
+++ b/media/css/l10n/az/intl.css
@@ -39,3 +39,9 @@
        url('/media/fonts/l10n/az/mplus-2c-black-az-subset.woff') format('woff'),
        url('/media/fonts/l10n/az/mplus-2c-black-az-subset.ttf') format('truetype');
 }
+
+/* Bug 1174423 */
+
+* {
+  font-variant: normal !important;
+}
