--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -310,6 +310,15 @@ dl.faq dd {
     margin-bottom: 1.5em;
 }
 
+dl.simple dt {
+    .font-size(18px);
+    font-weight: bold;
+}
+
+dl.simple dd {
+    margin-bottom: @baseLine;
+}
+
 pre,
 code {
     color: @textColorTertiary;
