--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -282,6 +282,15 @@ dl dd {
     margin-bottom: @baseLine * 2;
 }
 
+dl.simple dt {
+    .font-size(18px);
+    font-weight: bold;
+}
+
+dl.simple dd {
+    margin-bottom: @baseLine;
+}
+
 code {
     color: @textColorTertiary;
     .font-size(@baseFontSize);
