--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/policies.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/policies.html
@@ -16,7 +16,7 @@
 <h2>{{ _('Governance') }}</h2>
 
 <ul>
-  <li><a href="//www.mozilla.org/hacking/module-ownership.html">{{ _('Mozilla Modules and Module Ownership') }}</a></li>
+  <li><a href="{{ url('mozorg.about.governance.policies.module-ownership') }}">{{ _('Mozilla Modules and Module Ownership') }}</a></li>
   <li><a href="//wiki.mozilla.org/Modules">{{ _('Module Owners List') }}</a></li>
   <li><a href="{{ url('mozorg.about.governance.policies.participation') }}">{{ _('Mozilla Community Participation Guidelines') }}</a></li>
 </ul>
@@ -27,8 +27,8 @@
 
 <ul>
   <li><a href="{{ url('mozorg.about.governance.policies.commit.access-policy') }}">{{ _('Commit Access Policy') }}</a></li>
-  <li><a href="//www.mozilla.org/hacking/reviewers.html">{{ _('Super-Review Policy') }}</a></li>
-  <li><a href="//www.mozilla.org/hacking/regression-policy.html">{{ _('Performance Regressions Policy') }}</a></li>
+  <li><a href="{{ url('mozorg.about.governance.policies.reviewers') }}">{{ _('Super-Review Policy') }}</a></li>
+  <li><a href="{{ url('mozorg.about.governance.policies.regressions') }}">{{ _('Performance Regressions Policy') }}</a></li>
 </ul>
 
 <h2>{{ _('Licensing') }}</h2>
