--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/regressions.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/regressions.html
@@ -12,59 +12,50 @@
 <nav role="directory">
   <p>{{ _('In this document:') }}</p>
   <ul>
-    <li><a href="#basic-policy">{{ _('Basic Policy') }}</a>: {{ _('The tree is to be closed in response to serious performance regressions.') }}</li>
-    <li><a href="#implementation">{{ _('Implementation') }}</a>: {{ _('When the tree is to be closed and how it is to be reopened.') }}</li>
-    <li><a href="#new-features">{{ _('New Features vs. Performance') }}</a>: {{ _('Potential approaches for a valuable new feature that causes performance regressions.') }}</li>
-    <li><a href="#footprint-increases">{{ _('Footprint Increases') }}</a>: {{ _('Tree closure policy not applicable.') }}</li>
+    <li><a href="#basic-policy">{{ _('Basic Policy') }}</a>: {{ _('Patch authors will be notified with a bug of regressions and have 3 days to respond or get backed out.') }}</li>
+    <li><a href="#requirements">{{ _('Requirements') }}</a>: {{ _('Requirements for bugs.') }}</li>
+    <li><a href="#outcomes">{{ _('Acceptable Outcomes') }}</a>: {{ _('Responses to regressions.') }}</li>
+    <li><a href="#other">{{ _('Other Scenarios') }}</a>: {{ _('Non standard regressions.') }}</li>
   </ul>
 </nav>
 
 <section id="basic-policy">
-  <h2>{{ _('Basic Policy: Tree Closure') }}</h2>
-  <p>{{ _('Performance is a critical goal for Mozilla releases and the commercial products that will be based on Mozilla. We cannot allow performance regressions to go unnoticed or unresolved during our development cycles. Yet our automated tools are of only limited help in determining the cause of performance regressions. The sheriffs are the first line of defense and those monitoring the tree must take an active stance in responding to performance regressions. We have therefore implemented a policy of tree closure for serious performance regressions.') }}</p>
+  <h2>{{ _('Basic Policy: Bug filed') }}</h2>
+  <p>{{ _('Performance is a critical goal for Mozilla releases and the commercial products that will be based on Mozilla. We cannot allow performance regressions to go unnoticed or unresolved during our development cycles. When a regression is identified a bug will be filed and the patch author will be asked to provide information via the needinfo flag in bugzilla. We expect a response and reasonable dialog within 3 business days. In the unfortunate event that we cannot learn more about the regression, we will backout the offending patch(es) and the patch author can reland when they have more time to investigate.') }}</p>
 </section>
 
-<section id="implementation">
-  <h2>{{ _('Implementation') }}</h2> 
-  <p>{{ _('Performance regressions are measured against the numbers reported on tinderbox by various regression tests including tests for startup time (Ts), pageload (Tp), and new window open (Txul). These tests are run on several machines with varying processor speeds and memory configurations. When a performance regression appears that is “bad enough,”* then') }}</p>
+<section id="requirements">
+  <h2>{{ _('Requirements') }}</h2> 
+  <p>{{ _('To be fair, some initial work up front should be done prior to filing a bug and requesting a needinfo from the original author.  Here is what to expect:') }}</p>
   <ul>
-    <li>{{ _('The tree is to be closed') }}
-      <ul>
-        <li>{{ _('Those on the hook are on the hook - it’s the job of each person on the hook to figure out whether his or her check-in caused the problem.') }}</li>
-        <li>{{ _('The hook gets one hour.') }}</li>
-        <li>{{ _('Those on the hook may exonerate their individual check-ins through an explanation as to why their code is not the problem (e.g., my code doesn’t run at start-up for a regression in start-up performance). To be effective, the explanation must be convincing to the sheriff and the performance gurus.') }}</li>
-      </ul>
-    </li>
-    <li>{{ _('Starting on the 61st minute, checkins that have not been exonerated are backed out by the sheriff') }}</li>
-    <li>{{ _('If there is no good idea as to what caused the problem, then') }}
-    <ul>
-      <li>{{ _('the tree remains closed') }}</li>
-      <li>{{ _('everyone is backed out') }}</li>
-      <li>{{ _('those who were backed out are allowed to check-in only through a metering process. The sheriff decides the check-in order.') }}</li>
-    </ul>
-    </li>
-    <li>{{ _('If there is a reasonable idea about what caused the problem, then') }}
-      <ul>
-        <li>{{ _('the suspect checkin is backed out') }}</li>
-        <li>{{ _('we wait for the tinderboxen to cycle and verify that the regression is fixed') }}</li>
-        <li>{{ _('the tree is opened') }}</li>
-      </ul>
-    </li>
+    <li>{{ _('On integration branches (higher volume), a talos sheriff will have verified the root cause within 1 week of the patch landing.') }}</li>
+    <li>{{ _('a patch or set of patches from a bug must be identified as the root cause. This can take place through retriggers on the tree or in the case of many patches landing at once this would take place through a push to try backing out the suspected patch(es).') }}</li>
+    <li>{{ _('links in the bug to document the regression (and any related regressions/improvements).') }}</li>
+    <li>{{ _('if we are confident this is the root cause and it meets a 3% regression threshold, then the needinfo request will mention that this policy will be enforced.') }}</li>
   </ul>
-  <aside>
-    <p><strong>*</strong> We have not tried to define “bad enough.” We believe that the sheriff in conjunction with performance gurus, super-reviewers, mozilla.org staff and concerned developers will be able to determine when a regression is bad enough. If it turns out a significant number of these decisions are controversial, then mozilla.org staff will look at creating more precise guidelines, and will use the experiences gained with this current policy to create a more detailed one. So please, do not attack the sheriffs for personal disagreement over what is bad enough. We expect sheriffs to do their best, to get input from the relevant people and to act when appropriate. We expect post-mortems regarding what was backed out, when, why, and how we might proceed better the next time. We expect civil discussion. We do not expect our sheriffs to be the subject of virulent attacks because they did or did not back out a particular check-in.</p>
-  </aside>
 </section>
 
-<section id="new-features">
-  <h2>{{ _('New Features vs. Performance') }}</h2>
-  <p>{{ _('It may happen that a highly desirable feature results in a performance regression. In that case, those wishing to include the feature in Mozilla ought to do the following. Enlist help to reduce the performance degradation as much as possible. Repeat this step. Evaluate how important the feature really is. Be brutal. If the feature is important only to a few, the case for accepting a performance regression will be very hard. If the feature is important to a significant number of users, then start a discussion with drivers@mozilla.org about the value of your feature and why it is important enough to warrant a performance regression. Your chances of success will go way up if you can fix an equivalent performance bug or find a way to separate out another feature that has a similar performance cost. Even small declines in performance add up, so expect to have to work hard to justify regressions.') }}</p>
+<section id="outcomes">
+  <h2>{{ _('Acceptable Outcomes') }}</h2>
+  <p>{{ _('What we expect from a developer when asking them to look at a regression:') }}</p>
+  <ul>
+    <li>{{ _('A promise to attempt a fix at the bug is agreed upon, the bug is assigned to someone and an estimated timeline is documented in the bug.') }}</li>
+    <li>{{ _('The bug will contain enough details and evidence to support accepting this regression, we will mark it as wontfix.') }}</li>
+    <li>{{ _('It is agreed that this should be backed out and a sheriff will verify the backout removes the regressions.') }}</li>
+  </ul>
 </section>
 
-<section id="footprint-increases">
-  <h2>{{ _('Footprint Increases') }}</h2>
-  <p>{{ _('This policy does not apply to unexpected increases in Mozilla’s footprint. Staff feels that the cause of bloat and leaks has not been so difficult to identify, and so this policy is not required.') }}</p>
+<section id="other">
+  <h2>{{ _('Other Scenarios') }}</h2>
+  <p>{{ _('There are many reasons why a regression will not fall into the above workflow. Here a few examples of other scenarios and how we will handle them:') }}</p>
+  <ul>
+    <li>{{ _('A bug related to the alert is not filed within 1 week of the patch landing. This removes the urgency and required action.') }}</li>
+    <li>{{ _('We only caught a regression at uplift time. There is a chance this isn’t easily determined, this will be documented and identified patch authors will use their judgement to fix the bug.') }}</li>
+    <li>{{ _('Regression is unrelated to code (say pgo issue) - this should be documented in the bug and closed as wontfix.') }}</li>
+    <li>{{ _('When we uplift to Aurora or Beta, all regressions filed before the uplift that show up on the upstream branch will have a needinfo flag set and require action to be taken.') }}</li>
+    <li>{{ _('A backout or fix doesn’t fully resolve the regression. We will do our best to understand the difference and fix or document the remainder.') }}</li>
+  </ul>
 </section>
 
-<p><strong>{{ _('Contact') }}</strong>: Mitchell Baker &lt;<a href="mailto:mitchell@mozilla.org">mitchell@mozilla.org</a>&gt;</p>
+<p><strong>{{ _('Contact') }}</strong>: Joel Maher &lt;<a href="mailto:jmaher@mozilla.com">jmaher@mozilla.com</a>&gt;</p>
 {% endblock %}
