Fix Bug 1133266 - Move Thunderbird Privacy Policy to Bedrock

--- a/bedrock/privacy/templates/privacy/index.html
+++ b/bedrock/privacy/templates/privacy/index.html
@@ -85,6 +85,7 @@
         <li class="policy-marketplace"><a href="https://marketplace.firefox.com/privacy-policy">{{ _('Firefox Marketplace') }}</a></li>
         <li class="policy-firefox-hello"><a href="{{ url('privacy.notices.firefox-hello') }}">{{ _('Firefox Hello') }}</a></li>
         <li class="policy-persona"><a href="{{ url('persona.privacy-policy') }}">{{ _('Persona') }}</a></li>
+        <li class="policy-thunderbird"><a href="{{ url('privacy.notices.thunderbird') }}">{{ _('Thunderbird') }}</a></li>
       </ul>
     </nav>
   </section>
