--- a/media/css/privacy/privacy.less
+++ b/media/css/privacy/privacy.less
@@ -198,6 +198,10 @@
     &.policy-firefox-hello a:before {
       background-position: left -320px;
     }
+
+    &.policy-thunderbird a:before {
+      background-position: left -280px;
+    }
   }
 }
 
