--- a/bedrock/privacy/templates/privacy/archive/index.html
+++ b/bedrock/privacy/templates/privacy/archive/index.html
@@ -33,6 +33,12 @@
       </ul>
     </section>
     <section>
+      <h2>{{ _('Thunderbird') }}</h2>
+      <ul>
+        <li><a href="{{ url('privacy.archive.thunderbird-2010-06') }}"><time datetime="2010-06">{{ _('June 2010') }}</time></a></li>
+      </ul>
+    </section>
+    <section>
       <h2>{{ _('Mozilla Websites') }}</h2>
       <ul>
         <li><a href="{{ url('privacy.archive.websites-2013-08') }}"><time datetime="2013-08">{{ _('August 2013') }}</time></a></li>
