L10n fixes and style updates

--- a/bedrock/firefox/templates/firefox/whatsnew_40/index.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_40/index.html
@@ -65,7 +65,7 @@
   <section class="firefox-learn-links">
     <ul>
       <li><a class="more" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 140 140">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 140 140" width="140" height="140">
           <path fill="none" d="M0 0h140v140H0z"/>
           <path class="circle" fill="#CCE2F4" d="M70 .5C31.6.5.5 31.6.5 70s31.1 69.5 69.5 69.5 69.5-31.1 69.5-69.5S108.4.5 70 .5z"/>
           <defs>
@@ -80,7 +80,7 @@
         {{ _('Privacy') }}
       </a></li>
       <li><a class="more" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140" width="140" height="140">
           <path fill="none" d="M0 0h140v140H0z"/>
           <path class="circle" fill="#CCE2F4" d="M70 .5C31.6.5.5 31.6.5 70s31.1 69.5 69.5 69.5 69.5-31.1 69.5-69.5S108.4.5 70 .5z"/>
           <path fill="#FFF" d="M70 13.2c-31.4 0-56.8 25.4-56.8 56.8s25.4 56.8 56.8 56.8 56.8-25.4 56.8-56.8S101.4 13.2 70 13.2z" opacity=".3"/>
@@ -92,7 +92,7 @@
         {{ _('Speed') }}
       </a></li>
       <li><a class="more" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140" width="140" height="140">
           <path fill="none" d="M0 0h140v140H0z"/>
           <path class="circle" fill="#CCE2F4" d="M70 .5C31.6.5.5 31.6.5 70s31.1 69.5 69.5 69.5 69.5-31.1 69.5-69.5S108.4.5 70 .5z"/>
           <path opacity=".7" fill="#FFF" d="M130.8 36.3H23.1v36.2h116.4c0-.8.1-1.6.1-2.5-.1-12.2-3.3-23.7-8.8-33.7z"/>
