--- a/media/css/sandstone/fira-fonts.less
+++ b/media/css/sandstone/fira-fonts.less
@@ -47,19 +47,19 @@
     font-style: italic;
 }
 
-@baseFiraFontFamily: 'Fira Sans', sans-serif;
+@baseFiraFontFamily: 'Fira Sans', X-LocaleSpecific, sans-serif;
 
 .fira-sans() {
     font-family: @baseFiraFontFamily;
 }
 
 .fira-sans-light() {
-    font-family: 'Fira Sans Light', @baseFiraFontFamily;
+    font-family: 'Fira Sans Light', X-LocaleSpecific-Light, @baseFiraFontFamily;
     font-weight: normal;
 }
 
 .fira-sans-light-italic() {
-    font-family: 'Fira Sans Light', @baseFiraFontFamily;
+    font-family: 'Fira Sans Light', X-LocaleSpecific-Light, @baseFiraFontFamily;
     font-weight: normal;
     font-style: italic;
 }
