Set default browser when clicking CTA button

--- a/bedrock/firefox/templates/firefox/whatsnew_40/index.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_40/index.html
@@ -60,7 +60,7 @@
       <li>{{ _('Scroll down to “Web browser”') }}</li>
       <li>{{ _('Choose Firefox') }}</li>
     </ol>
-    <button type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
+    <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
   </section>
   <section class="firefox-learn-links">
     <ul>
