Fix Bug 1185475, ensure all fields are implcitly or explicitly associated a11y

--- a/bedrock/mozorg/templates/mozorg/contribute/signup.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/signup.html
@@ -122,17 +122,17 @@
         <h2 class="section-title">{{ _('Now tell us a little about yourself:') }}</h2>
         <ul>
           <li>
-            <label for="person-name">{{ _('Name') }}</label>
+            <label for="id_name">{{ _('Name') }}</label>
             {{ form.name }}
             {{ form.name.errors }}
           </li>
           <li>
-            <label for="person-email">{{ _('Email address') }}</label>
+            <label for="id_email">{{ _('Email address') }}</label>
             {{ form.email }}
             {{ form.email.errors }}
           </li>
           <li>
-            <label for="person-country">{{ _('Country') }}</label>
+            <label for="id_country">{{ _('Country') }}</label>
             <span class="select">
               {{ form.country }}
             </span>
