[fix bug 1186221] FxOS Orange Klif Egypt availability.
- Add MTN to list of One Touch Fire E operators.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -87,6 +87,12 @@
             <li><a class="zte-open-c" href="http://www.ebay.de/itm/eBay-Exklusiv-ZTE-OPEN-C-Neuesten-Firefox-OS-DualCore-1-2-GHz-4-0-3G-Smartphone-/131151681046?ssPageName=STRK:MESE:IT">ZTE Open C</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="eg">
+          <h3>{{ _('Egypt') }}</h3>
+          <ul>
+            <li><a class="orange" href="https://www.mobinil.com/en/shop/offers-promotions/klif-bundle-with-control-free-176-offers">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="es">
           <h3>{{_('Spain')}}</h3>
           <ul>
