--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -77,6 +77,7 @@
               <option value="co">{{ _('Colombia') }}</option>
               <option value="cr">{{ _('Costa Rica') }}</option>
               <option value="cz">{{ _('Czech Republic') }}</option>
+              <option value="eg">{{ _('Egypt') }}</option>
               <option value="sv">{{ _('El Salvador') }}</option>
               <option value="fr">{{ _('France') }}</option>
               <option value="de">{{ _('Germany') }}</option>
@@ -1258,6 +1259,7 @@
                   <ul class="comma-list">
                     <li>{{ _('Congstar') }}</li>
                     <li>{{ _('MegaFon') }}</li>
+                    <li>{{ _('MTN') }}</li>
                     <li>{{ _('O2') }}</li>
                     <li>{{ _('T-Mobile') }}</li>
                   </ul>
@@ -2324,6 +2326,7 @@
 
                   <ul class="comma-list">
                     <li>{{ _('Cameroon') }}</li>
+                    <li>{{ _('Egypt') }}</li>
                     <li>{{ _('Ivory Coast') }}</li>
                     <li>{{ _('Kenya') }}</li>
                     <li>{{ _('Madagascar') }}</li>
