--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -154,6 +154,12 @@ textarea:focus {
     }
 }
 
+.select.invalid {
+    border-color: #a91300;
+    @shadow: 0 0 0 2px rgba(255,80,80,0.4);
+    .box-shadow(@shadow);
+    .transition(all linear .1s);
+}
 
 
 
@@ -576,9 +582,9 @@ textarea:focus {
     }
 
     .window .inner .overlay-contents {
-        padding-top: 40px; 
+        padding-top: 40px;
     }
-} 
+}
 
 
 /*-------------------------------------------------------------------------*/
@@ -2207,10 +2213,10 @@ textarea:focus {
             padding-bottom: 40px;
         }
         .section-tagline {
-            margin: 0 25px 20px; 
+            margin: 0 25px 20px;
         }
     }
-    
+
     .confirm-body {
         padding-left: 380px;
     }
