Add no-js styling

--- a/media/css/firefox/whatsnew_40/whatsnew-40.less
+++ b/media/css/firefox/whatsnew_40/whatsnew-40.less
@@ -277,6 +277,15 @@ footer[role="contentinfo"] {
     }
 }
 
+.no-js {
+    .main-header {
+        padding-top: 100px;
+    }
+    .firefox-learn-links {
+        display: block;
+    }
+}
+
 @media only screen and (max-width: @breakDesktop) {
     main,
     #masthead,
